# here-for-change

./: .gitignore  Dockerfile  README.md  app.json  boundary-format.json  clear_all_ward_detail_feedbacks.py  docker-compose.yml  heroku.yml  load_dummy_ward_details.py  load_municipalities.py  load_municipality_boundaries.py  load_municipality_details.py  load_provinces.py  load_ward_details_data_file.py  load_wards.py  manage.py  package.json  pyproject.toml  scrape_municipality_details.py  scrape_ward_details.py  tailwind.config.js
.github/workflows/: codeql-analysis.yml  cypress.yml  django-test.yml
assets/bundles/js/: here_for_change.js  here_for_change.js.map
assets/bundles/scss/: here_for_change.css  here_for_change.css.map
assets/js/: here_for_change.js
cypress/e2e/: home.cy.js  municipalities.cy.js  wards.cy.js
here_for_change/: mixins.py  settings.py  test.py  urls.py  wsgi.py
here_for_change/jstoolchain/: package-lock.json  package.json  tailwind.config.js
here_for_change/municipalities/: admin.py  apps.py  context_processors.py  decorators.py  enums.py  forms.py  models.py  tests.py  urls.py  views.py
here_for_change/municipalities/fixtures/: demo-data.json  test-data.json
here_for_change/municipalities/includes/: ward_notification.html
here_for_change/municipalities/migrations/: 0001_initial.py  (+30 more)
here_for_change/templates/: base.html  chart .js  embed_base.html  full_footer.html  full_nav.html  index.html  simple_footer.html  simple_nav.html
municipality_details/: data.json  slugified-data.json
ward_details/: backup.json  data.json
(+30 files in other folders)
