[tool.poetry]
name = "here_for_change"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2.20"
django-environ = "^0.4.5"
psycopg2 = "^2.8.6"
whitenoise = "^5.2.0"
django-extensions = "^3.0.9"
html5lib = "^1.1"
geoip2 = "^4.6.0"
gunicorn = "^20.0.4"
djangorestframework = "^3.12.1"
gevent = "^20.9.0"
django-autoslug = "^1.9.8"
beautifulsoup4 = "^4.11.1"
selenium = "^4.6.0"
requests = "^2.28.1"
googlemaps = "^4.7.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.5.4"

[build-system]
requires = ["poetry>=1.1.14"]
build-backend = "poetry.masonry.api"
